# sora-engine

./: .gitignore  Claude.md  README.md
backend/: Cargo.toml  DEPLOYMENT.md  README.md  openapi.yaml  wrangler.toml
backend/docs/: index.html  privacy-policy.html  swagger-ui.html
backend/migrations/: 001_core_schema.sql
backend/src/: auth.rs  credits.rs  db.rs  error.rs  lib.rs  models.rs  openai_client.rs  pricing.rs  rate_limit.rs
backend/src/handlers/: auth.rs  credits.rs  mod.rs  video_proxy.rs  videos.rs  webhooks.rs
ios/: README.md
ios/sora/: Configuration.storekit
ios/sora/sora/: AppDelegate.swift  SceneDelegate.swift
ios/sora/sora.xcodeproj/: project.pbxproj
ios/sora/sora/App/: AppCoordinator.swift
ios/sora/sora/Networking/: APIModels.swift  NetworkManager.swift
ios/sora/sora/Resources/: Info.plist  PrivacyInfo.xcprivacy
ios/sora/sora/Screens/Auth/: SignInViewController.swift  SignInViewModel.swift
ios/sora/sora/Screens/CreateVideo/: CreateVideoViewController.swift  CreateVideoViewModel.swift
ios/sora/sora/Screens/Home/: HomeViewController.swift  HomeViewModel.swift
ios/sora/sora/Screens/Purchase/: PurchaseViewController.swift
ios/sora/sora/Screens/VideoPlayer/: VideoPlayerViewController.swift
ios/sora/sora/Services/: AuthService.swift  CreditService.swift  StoreManager.swift  VideoService.swift
ios/sora/sora/Utilities/: VideoCacheManager.swift  VideoThumbnailGenerator.swift
ios/sora/sora/Utils/: AppLogger.swift  Constants.swift  Extensions.swift  KeychainManager.swift
ios/sora/sora/Views/: VideoCell.swift
(+1 files in other folders)
