[package]
name = "sora-engine"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Worker backend for iOS Sora video generation"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
console_error_panic_hook = "0.1"
jwt-simple = "0.12"
async-trait = "0.1"
url = "2.5"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
